--- a/src/apps/views/admin/manager/import.ejs
+++ b/src/apps/views/admin/manager/import.ejs
@@ -82,6 +82,36 @@
 									</tbody>
 								</table>
 							</div>
+
+              <div class="panel-footer">
+                <nav aria-label="Page navigation example">
+                  <ul class="pagination">
+                    <% if (currentPage > 1) { %>
+                      <li class="page-item">
+                        <a class="page-link" href="/admin/manager/import?page=<%= currentPage - 1 %>&<%= new URLSearchParams(query).toString() %>">
+                          &laquo;
+                        </a>
+                      </li>
+                    <% } %>
+              
+                    <% for (let i = 1; i <= totalPages; i++) { %>
+                      <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+                        <a class="page-link" href="/admin/manager/import?page=<%= i %>&<%= new URLSearchParams(query).toString() %>">
+                          <%= i %>
+                        </a>
+                      </li>
+                    <% } %>
+              
+                    <% if (currentPage < totalPages) { %>
+                      <li class="page-item">
+                        <a class="page-link" href="/admin/manager/import?page=<%= currentPage + 1 %>&<%= new URLSearchParams(query).toString() %>">
+                          &raquo;
+                        </a>
+                      </li>
+                    <% } %>
+                  </ul>
+                </nav>
+              </div>
 					</div>
 			</div>
 		</div>
