--- a/src/apps/views/site/product/editComment.ejs
+++ b/src/apps/views/site/product/editComment.ejs
@@ -8,7 +8,7 @@
             <form method="post">
                 <div class="form-group">
                     <label>Nội dung:</label>
-                    <textarea name="updateContent" required value rows="4" class="form-control"><%=comment.content%></textarea>
+                    <textarea name="content" required value rows="4" class="form-control"><%=comment.content%></textarea>
                 </div>
                 <button type="submit" name="sbm" class="btn btn-outline-primary">Gửi</button>
             </form> 
