--- a/src/apps/views/admin/category/category.ejs
+++ b/src/apps/views/admin/category/category.ejs
@@ -74,20 +74,20 @@
 							<div class="panel-footer">
 								<nav aria-label="Page navigation example">
 									<ul class="pagination">
-										<%if(hasPrev) {%>
-											<li class="page-item"><a class="page-link" href="/admin/category?page=<%=prev%>">&laquo;</a></li>
+										<%if(currentPage > 1) {%>
+											<li class="page-item"><a class="page-link" href="/admin/category?page=<%= currentPage - 1 %>">&laquo;</a></li>
 										<%}%>
 										
-										<%for(i of pages) {%>
-											<%if(i === "...") {%>
-												<li class="page-item"><span class="page-link"><%=i%></span></li>
-											<%} else {%>
-												<li class="page-item <%= page===i?'active':''%>"><a class="page-link" href="/admin/category?page=<%=i%>"><%=i%></a></li>
-											<%}%>
-										<%}%>
+										<% for (let i = 1; i <= totalPages; i++) { %>
+											<li class="page-item <%= currentPage === i ? 'active' : '' %>">
+											  <a class="page-link" href="/admin/category?page=<%= i %>">
+												<%= i %>
+											  </a>
+											</li>
+										<% } %>
 		
-										<%if(hasNext) {%>
-											<li class="page-item"><a class="page-link" href="/admin/category?page=<%=next%>">&raquo;</a></li>
+										<%if(currentPage < totalPages) {%>
+											<li class="page-item"><a class="page-link" href="/admin/category?page=<%= currentPage + 1 %>">&raquo;</a></li>
 										<%}%>
 									</ul>
 								</nav>
