--- a/src/apps/views/admin/comment/searchComment.ejs
+++ b/src/apps/views/admin/comment/searchComment.ejs
@@ -53,7 +53,15 @@
 												<td><%=comment.prd_id.name%></td>
 												<td><%=comment.content%></td>
 												<td class="form-group">
-													<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=comment.id%>" data-target="#delete-item">Xóa</a>
+													<%if(!comment.isBrowse) {%>
+														<div style="display: flex;">
+															<a style="margin-right: 5px;" href="/admin/comment/browse/<%=comment._id%>" class="btn btn-success">Duyệt bình luận</a>
+															<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=comment._id%>" data-target="#delete-item">Xóa</a>
+														</div>
+													<%} else { %>
+														<a style="margin-right: 5px;" href="/admin/comment/hidden/<%=comment._id%>" class="btn btn-primary">Ẩn bình luận</a>
+														<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=comment._id%>" data-target="#delete-item">Xóa</a>
+													<%}%>
 												</td>
 											</tr>
 										<%}%>
