--- a/src/apps/views/admin/order/order-delivered.ejs
+++ b/src/apps/views/admin/order/order-delivered.ejs
@@ -73,11 +73,21 @@
 							<div class="panel-footer">
 								<nav aria-label="Page navigation example">
 									<ul class="pagination">
-										<li class="page-item"><a class="page-link" href="#">&laquo;</a></li>
-										<li class="page-item"><a class="page-link" href="#">1</a></li>
-										<li class="page-item"><a class="page-link" href="#">2</a></li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item"><a class="page-link" href="#">&raquo;</a></li>
+										<%if(currentPage > 1) {%>
+											<li class="page-item"><a class="page-link" href="/admin/order-delivered?page=<%= currentPage - 1 %>">&laquo;</a></li>
+										<%}%>
+										
+										<% for (let i = 1; i <= totalPages; i++) { %>
+											<li class="page-item <%= currentPage === i ? 'active' : '' %>">
+											  <a class="page-link" href="/admin/order-delivered?page=<%= i %>">
+												<%= i %>
+											  </a>
+											</li>
+										  <% } %>
+		
+										<%if(currentPage < totalPages) {%>
+											<li class="page-item"><a class="page-link" href="/admin/order-delivered?page=<%= currentPage + 1 %>">&raquo;</a></li>
+										<%}%>
 									</ul>
 								</nav>
 							</div>
