--- a/src/apps/views/admin/order/order.ejs
+++ b/src/apps/views/admin/order/order.ejs
@@ -66,7 +66,7 @@
 												<td><%=order.status%></td>
 												<td class="form-group">
 													<a href="/admin/order/detail/<%=order._id%>" class="btn btn-primary">xem chi tiết</a>
-													<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=order._id%>" data-target="#delete-item">xóa</a>
+													<a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=order._id%>" data-target="#delete-item">hủy đơn</a>
 												</td>
 											</tr>
                                         <%}%>
@@ -95,17 +95,17 @@
 		<div class="modal-dialog">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h5 class="modal-title">Xóa đơn hàng ?</h5>
+			  <h5 class="modal-title">hủy đơn hàng ?</h5>
 			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			  </button>
 			</div>
 			<div class="modal-body">
-			  <p>Bạn có muốn xóa đơn hàng này không ?</p>
+			  <p>Bạn có muốn hủy đơn hàng này không ?</p>
 			</div>
 			<div class="modal-footer">
-			  <button type="button" class="btn btn-primary" data-dismiss="modal">Hủy</button>
-			  <button id="btn-delete" type="button" class="btn btn-danger">Xóa bỏ</button>
+			  <button type="button" class="btn btn-primary" data-dismiss="modal">Không</button>
+			  <button id="btn-delete" type="button" class="btn btn-danger">Hủy đơn</button>
 			</div>
 		  </div>
 		</div>
