--- a/src/apps/views/site/home/index.ejs
+++ b/src/apps/views/site/home/index.ejs
@@ -73,11 +73,7 @@
                                     </p>
                                 <%}%>
 							    
-                                <%for(order of orders) {%>
-                                    <%if(order.productName === product.name) {%>
-                                        <p><span>Đã bán: <%=order.totalQuantity%></span></p>
-                                    <%}%>
-                                <%}%>
+                                <p><span>Đã bán: <%=product.totalSold%></span></p>
                             </div>
                         </div>
                     <%}%>
@@ -87,7 +83,7 @@
 
         <%if(productBestSell.length>0) {%>
             <div style="margin-top: 30px;" id="products" class="col-lg-12">
-                <h3>Sản phẩm bán chạy</h3>
+                <h3>Sản phẩm bán chạy trong tháng</h3>
                 <div class="products-list row">
                     <%for(product of productBestSell){ %>
                         <div class="products-item col-lg-3">
