--- a/src/apps/views/site/product/product.ejs
+++ b/src/apps/views/site/product/product.ejs
@@ -86,7 +86,7 @@
                     <%for(comment of comments) { %>
                         <div class="comment-item">
                             <div>
-                                <p class="comment-fullName"><%=comment.fullNameSite%> - <%=moment(comment.createdAt).format('DD/MM/YYYY')%></p>
+                                <p class="comment-fullName"><%=comment.fullNameSite%> - <%=moment(comment.createdAt).format('DD/MM/YYYY (HH:mm)')%></p>
                                 <p><%=comment.content%></p>
                                 <% if(comment.userSiteId === userSiteId) {%>
                                     <a href="/editComment-<%=comment._id%>" class="btn btn-outline-primary btn-sm">Chỉnh sửa</a>
@@ -125,11 +125,8 @@
                                         </p>
                                     <%}%>
 
-                                    <%for(order of orders) {%>
-                                        <%if(order.productName === product.name) {%>
-                                            <p><span>Đã bán: <%=order.totalQuantity%></span></p>
-                                        <%}%>
-                                    <%}%>
+                                    <p><span>Đã bán: <%=product.totalSold%></span></p>
+
                                 </div>
                             </div>
                         <%}%>
@@ -139,7 +136,7 @@
 
             <%if(productBestSell.length>0) {%>
                 <div style="margin-top: 30px;" id="products" class="col-lg-12">
-                    <h3>Sản phẩm bán chạy</h3>
+                    <h3>Sản phẩm bán chạy trong tháng</h3>
                     <div class="products-list row">
                         <%for(product of productBestSell){ %>
                             <div class="products-item col-lg-3">
